Progressing on local data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@ write by the experts.</string>
     <string name="kiddo_grow_chart">Kiddo Grow Chart</string>
     <string name="kiddo_journal">Kiddo Journal</string>
     <string name="toolbar">toolbar</string>
+    <string name="notes">Notes</string>
 </resources>
