Progressing on making Kiddo Journal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@ write by the experts.</string>
     <string name="kiddo_journal">Kiddo Journal</string>
     <string name="toolbar">toolbar</string>
     <string name="notes">Notes</string>
+    <string name="journal_title">Journal Title</string>
+    <string name="journal_subtitle">Journal Subtitle</string>
 </resources>
