--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@ write by the experts.</string>
     <string name="kiddo_age">Kiddo Age in Month</string>
     <string name="kiddo_weight_kg">Kiddo Weight in Kg</string>
     <string name="kiddo_height_cm">Kiddo Height in Cm</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
