--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@ write by the experts.</string>
     <string name="kiddo_height_cm">Kiddo Height in Cm</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="storage_permission_text">We need permission from your device</string>
 </resources>
