--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@ write by the experts.</string>
     <string name="kiddo_grow_chart">Kiddo Grow Chart</string>
     <string name="kiddo_journal">Kiddo Journal</string>
     <string name="toolbar">toolbar</string>
-    <string name="notes">Notes</string>
+    <string name="notes">Journal</string>
     <string name="journal_title">Journal Title</string>
     <string name="journal_subtitle">Journal Subtitle</string>
     <string name="kiddo_age">Kiddo Age in Month</string>
