--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@ write by the experts.</string>
     </string>
     <string name="command">Arahkan kamera ke bahan makanan</string>
     <string name="detect_food">Detect Food</string>
+    <string name="see_more">See more</string>
 </resources>
