Progressing on Recipe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@ write by the experts.</string>
     <string name="command">Arahkan kamera ke bahan makanan</string>
     <string name="detect_food">Detect Food</string>
     <string name="see_more">See more</string>
+    <string name="recipes">Recipes</string>
 </resources>
