--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,14 +15,14 @@ untuk anak anda.</string>
     <string name="desc_parenthood">Dapatkan artikel dan acara terbaik parenting
 oleh para ahli.</string>
     <string name="kiddo_grow_chart">Kiddo Grow Chart</string>
-    <string name="kiddo_journal">Kiddo Journal</string>
+    <string name="kiddo_journal">Jurnal Kiddo</string>
     <string name="toolbar">toolbar</string>
     <string name="notes">Journal</string>
-    <string name="journal_title">Journal Title</string>
-    <string name="journal_subtitle">Journal Subtitle</string>
-    <string name="kiddo_age">Kiddo Age in Month</string>
-    <string name="kiddo_weight_kg">Kiddo Weight in Kg</string>
-    <string name="kiddo_height_cm">Kiddo Height in Cm</string>
+    <string name="journal_title">Judul Journal</string>
+    <string name="journal_subtitle">Sub Judul Journal</string>
+    <string name="kiddo_age">Usia Anak dalam bulan</string>
+    <string name="kiddo_weight_kg">Berat Anak dalam Kg</string>
+    <string name="kiddo_height_cm">Tinggi Anak dalam Cm</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="storage_permission_text">We need permission from your device</string>
@@ -42,11 +42,12 @@ oleh para ahli.</string>
     </string>
     <string name="command">Arahkan kamera ke bahan makanan\n Kami akan merekomendasikan resep sesuai pedoman gizi seimbang\n Berdasarkan bahan makanan ini</string>
     <string name="detect_food">Detect Food</string>
-    <string name="see_more">See more</string>
+    <string name="see_more">Selengkapnya</string>
     <string name="recipes">Recipes</string>
     <string name="bahan">Bahan :</string>
     <string name="cara_membuat">Cara Membuat :</string>
     <string name="title_text">Title text</string>
     <string name="skip_intro">Lewati</string>
     <string name="next">Selanjutnya</string>
+    <string name="nama_anda">Nama Anda</string>
 </resources>
