Adding buku KIA

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,6 @@ oleh para ahli.</string>
     <string name="asi_journal_desc">Cek rutinitas ASI eksklusif bagi si kecil di sini</string>
     <string name="pregnant_journal_title">Pregnant Journal</string>
     <string name="pregnant_journal_desc">Abadikan momen kehamilan Anda di sini</string>
+    <string name="title_kia">Buku KIA</string>
+    <string name="desc_kia">Dapatkan pengetahuan lengkap melalui buku Kesehatan Ibu Anak</string>
 </resources>
