--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,6 @@ oleh para ahli.</string>
     <string name="pregnant_journal_desc">Abadikan momen kehamilan Anda di sini</string>
     <string name="title_kia">Buku KIA</string>
     <string name="desc_kia">Dapatkan pengetahuan lengkap melalui buku Kesehatan Ibu Anak</string>
+    <string name="title_knowledgebase">Knowledge Base</string>
+    <string name="desc_knowledgebase">Pahami informasi dasar seputar gizi seimbang bagi buah hati</string>
 </resources>
