Process on Validation Account

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,6 @@ oleh para ahli.</string>
     <string name="desc_kia">Dapatkan pengetahuan lengkap melalui buku Kesehatan Ibu Anak</string>
     <string name="title_knowledgebase">Knowledge Base</string>
     <string name="desc_knowledgebase">Pahami informasi dasar seputar gizi seimbang bagi buah hati</string>
+    <string name="perempuan">Perempuan</string>
+    <string name="laki_laki">Laki-laki</string>
 </resources>
