--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,8 +67,6 @@ oleh para ahli.</string>
     <string name="facebook_app_id">566824204560749</string>
     <string name="fb_login_protocol_scheme">fb566824204560749</string>
     <string name="continueFacebook">Lanjutkan dengan Facebook</string>
-
-
     <string name="kiddo_journal_title">Kiddo Journal</string>
     <string name="kiddo_journal_desc">Catat tumbuh kembang buah hati Anda di sini</string>
     <string name="asi_journal_title">ASI Journal</string>
@@ -81,4 +79,6 @@ oleh para ahli.</string>
     <string name="desc_knowledgebase">Pahami informasi dasar seputar gizi seimbang bagi buah hati</string>
     <string name="perempuan">Perempuan</string>
     <string name="laki_laki">Laki-laki</string>
+    <string name="b_diatas_b_6_bulan"><b>Diatas</b> 6 bulan</string>
+    <string name="dibawah_6_bulan"><b>Dibawah</b> 6 bulan</string>
 </resources>
