--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@ oleh para ahli.</string>
     <string name="gender_woman">Perempuan</string>
     <string name="ya">Ya</string>
     <string name="tidak">Tidak</string>
+    <string name="priority">Priority</string>
 </resources>
