--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,4 +88,5 @@ oleh para ahli.</string>
     <string name="ya">Ya</string>
     <string name="tidak">Tidak</string>
     <string name="priority">Priority</string>
+    <string name="lokasi_anda">Lokasi Anda</string>
 </resources>
