Progress in ASI Journal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,5 @@ oleh para ahli.</string>
     <string name="tidak">Tidak</string>
     <string name="priority">Priority</string>
     <string name="lokasi_anda">Lokasi Anda</string>
+    <string name="simpan">Simpan</string>
 </resources>
