--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,7 @@
     <string name="status_title">Status Gizi Buah Hati</string>
     <string name="status_ideal">Status Ideal : Belum ada data</string>
     <string name="rentang_ideal">Rentang Ideal : Belum ada rekomendasi</string>
-    <string name="desc_detect">Foto Bahan Makanan,
-Dapatkan resep,
+    <string name="desc_detect">Dapatkan resep,
 berikan nutrisi terbaik
 untuk anak anda.</string>
     <string name="parenthood">Parenthood</string>
@@ -101,4 +100,5 @@ oleh para ahli.</string>
     <string name="search">Isi jurnal bulanan ibu sekarang</string>
     <string name="reminder">Notifikasi Telah Dinyalakan</string>
     <string name="remindcancel">Notifikasi dimatikan</string>
+    <string name="nutrisi_ibu_hamil"><b>Baru!</b>\nNutrisi Ibu Hamil</string>
 </resources>
