Add Notification feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,22 @@ oleh para ahli.</string>
     <string name="search">Isi jurnal bulanan ibu sekarang</string>
     <string name="reminder">Notifikasi Telah Dinyalakan</string>
     <string name="remindcancel">Notifikasi dimatikan</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="messages_header">Messages</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="open_the_app">Isi Jurnalnya bu</string>
+    <string name="alarm">alarm</string>
 </resources>
