Improve in setting notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,6 @@ oleh para ahli.</string>
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
-    <string name="open_the_app">Isi Jurnalnya bu</string>
+    <string name="open_the_app">Selalu pantau buah hati agar terhindar dari stunting</string>
     <string name="alarm">alarm</string>
 </resources>
